fix spacing issues

--- a/css/scss/partials/_featured-article.scss
+++ b/css/scss/partials/_featured-article.scss
@@ -51,11 +51,12 @@
 
     &__content {
         background: #FFFFFF;
-        padding: 20px;
+        padding: 20px 20px 30px;
         transform: translate3d( 0, 40px, 0 );
         // box-shadow: 0 0 20px 0 rgba( darken( $secondary, 80% ), 0.3 );
         box-shadow: 0 30px 60px 0 rgba( darken( $secondary, 80% ), 0.4 );
         text-align: center;
+        margin-top: -20px;
 
         &__title {
             text-align: left;
